# readability

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
new_dale_chall_readability/: __init__.py  easy_words.py  formulas.py  utils.py
tests/: integration_test.py  new_dale_chall_readability_test.py  test_new_dale_chall_readability.py  utils_test.py
